package aura_game.app.Objects;

import java.util.ArrayList;
import java.util.List;

import aura_game.app.LPCActions.EntityStateMachine;
import com.badlogic.gdx.math.Polygon;
import com.badlogic.gdx.math.Rectangle;
import org.apache.commons.lang3.tuple.Pair;

import aura_game.app.Region;
import aura_game.app.GameManager.AudioManager;
import aura_game.app.GameManager.Game;
import aura_game.app.SpriteSheet.*;
import aura_game.app.Type.EntityType;


//Les spritesheet ont de base x=13 et y=21 sprites
public class Entity extends CollidableObject {

    private final SpriteSheetInfo spriteSheetInfo;
    /**Etant donné que certaines actions avec certaines armes (hache et slash par exemple) doivent commencer et finir par 2 au lieu de 0.*/
    private int currentBeginX;

    /**Hauteur de l'hitbox de l'entite pour marcher etc (colission/avec pts de vue iso)*/
    private int hitboxHeightFlat;

    /**Point bas gauche du debut du rectangle d'hitbox, par rapport à la position de l'entite */
    private int posHitboxX;
    /**Point bas gauche du debut du rectangle d'hitbox, par rapport à la position de l'entite */
    private int posHitboxY;
    /**Largeur du rectangle hitbox */
    private int hitboxWidth;
    /**Permet à chaque instance d'entité du même type d'accéder à la même instance de SpriteSheetData associée à ce type d'entité*/
    //private final SpriteSheetData spriteSheetData;

    /**Instance*/
    private int refreshTEMPO = 0;//TODO TEMPO
    private Region actualRegion;
    /**Dégats que fait l'entité, sans armes */
    private final float degatDefault;

    /**Longueur de la zone de dégats sans armes: 1e: le long de l'entité, 2e: en s'éloignant de l'entité, formant le rectangle commencant en hitZoneLenghtDefault*/
    private final Pair<Integer,Integer> hitZoneLenghtDefault;
    /** Décallage par rapport au point en bas à gauche du rectangle de longueur hitZoneLenghtDefault, le rectangle ayant un côté touchant le rectangleHitbox (selon la direction)
     * 1er: décallage vers le long intérieur de l'entité, 2e: en s'éloignant de l'entité
    */
    private final Pair<Integer,Integer> hitZonePointDecallageDefault;

    private Pair<Integer, Integer> currentHitZoneLenght;
    private Pair<Integer, Integer> currentHitZonePointDecallage;
    
    private int speed;

    private EntityStateMachine entityStateMachine;

    public Entity(EntityType type, int speed, int initX, int initY){
        
        super(type.getName(),new Rectangle(), initX,initY,
        type.tall(), new Polygon(new float[]{1,1,2,2,3,3}), type.hitboxHeight(),0,type.deathLoots());

        this.entityStateMachine = new EntityStateMachine();//Stocke les différentes actions
        spriteSheetInfo = new SpriteSheetInfo(type.spriteWidth(),type.spriteHeight(),"Entities/"+type.getName());
        //this.spriteSheetData = SpriteSheetDataManager.getSpriteSheetDataInstance(type);
        this.posHitboxX = this.getPosC_X() + spriteSheetInfo.SPRITE_WIDTH()/2 - hitboxWidth/2;
        this.posHitboxY = this.getPosC_Y() ;//TODO OK ??? BIEN CENTRE EN TERME DE X (souvent mais en Y c'est PosY + offY nn ?)
        this.hitboxWidth = type.hitboxWidth();
        this.currentBeginX = 0;
        this.speed = speed;
        this.hitboxHeightFlat=type.hitboxHeightFlat();

        this.getHitboxFlat().set(posHitboxX, (posHitboxY), hitboxWidth, hitboxHeightFlat);
        this.setHitboxPolygon(new Polygon(new float[]{posHitboxX,(posHitboxY),  posHitboxX,((posHitboxY)+hitboxHeightFlat),  (posHitboxX+hitboxWidth),((posHitboxY)+hitboxHeightFlat),  (posHitboxX+hitboxWidth),(posHitboxY)}));

        this.actualRegion = Game.getInstance().getRegion();
        this.hitZoneLenghtDefault = type.hitZoneLenghtDefault();
        this.hitZonePointDecallageDefault = type.hitZonePointDecallageDefault();
        this.currentHitZoneLenght = hitZoneLenghtDefault;
        this.currentHitZonePointDecallage = hitZonePointDecallageDefault;
        this.degatDefault = type.degatDefault();
    }


    public void setCurrentBeginX(int beginX){
        currentBeginX = beginX;
    }
    public int getCurrentBeginX(){
        return currentBeginX;
    }
    
    /**@return le SpriteSheetInfo contenant SPRITE_WIDTH, SPRITE_HEIGHT, Texture et TextureRegion[][] */
    public SpriteSheetInfo getSpriteSheetInfo(){
        return spriteSheetInfo;
    }

    public int getHitboxHeightFlat() {
        return hitboxHeightFlat;
    }

    public int getPosHitboxX(){
        return posHitboxX;
    }
    //POur Y c'est juste posCY + off nn ??
    public int getPosHitboxY(){
        return posHitboxY;
    }

    /**Largeur du rectangle hitbox */
    public int getHitboxWidth(){
        return hitboxWidth;
    }

    /**@return la position X du joueur au niveau du milieu de sprite */
    public int getCenterX(){
        return getPosC_X() + (spriteSheetInfo.SPRITE_WIDTH())/2;
    }


    public void updateHitbox(){
        this.posHitboxX =this.getPosC_X() + spriteSheetInfo.SPRITE_WIDTH()/2 - hitboxWidth/2;
        this.posHitboxY =this.getPosC_Y();
        getHitboxFlat().setX(posHitboxX);
        getHitboxFlat().setY(posHitboxY);
        this.setHitboxPolygon(new Polygon(new float[]{posHitboxX,posHitboxY,  posHitboxX,(posHitboxY+hitboxHeightFlat),  (posHitboxX+hitboxWidth),(posHitboxY+hitboxHeightFlat),  (posHitboxX+hitboxWidth),posHitboxY}));

    }

    public int getDifferrenceImageHitboxX(){
        return (int)getHitboxFlat().getX()- this.getPosC_X();//TODO bon X ?
    }

    public Region getActualRegion() {
        return actualRegion;
    }

    public EntityStateMachine getEntityStateMachine() {
        return entityStateMachine;
    }

    /**
     * Verifie si le X est dans la region (selon la hitbox du personnage) (au niveau des bords)
     * @param x la coordonnée x dont on veut tester l'appartenance
     * @return true si x est dans la region 0 sinon
     */
    public boolean isXOnRegion(int x){
        return (x >= -hitboxWidth && x <= (actualRegion.getCarte().getWidth() - hitboxWidth)) ;
    }

    /**
     * Verifie si le Y est dans la region (selon la hitbox du personnage) (au niveau des bords)
     * @param y la coordonnée y dont on veut tester l'appartenance
     * @return true si y est dans la region 0 sinon
     */
    public boolean isYOnRegion(int y){
        return (y >= 0 && y <= (actualRegion.getCarte().getHeight() - getHitboxHeight())) ;
    }


    /**@return le point x a laquelle il faut mettre le loot pour qu'il soit parfaitement centré horizontalement sur l'entité */
    public int getLootSpawnCenterX(int lootWidth){
        return getPosC_X() + (spriteSheetInfo.SPRITE_WIDTH() / 2) - (lootWidth / 2);
    }

    public int getSpeed(){
        return speed;
    }

    public Pair<Integer, Integer> getHitZoneLenghtDefault() {
        return hitZoneLenghtDefault;
    }

    public Pair<Integer, Integer> getHitZonePointDecallageDefault() {
        return hitZonePointDecallageDefault;
    }

    /**
     * Déplace l'entité de dx en X et dy en Y tout en gérant les collisions.
     * Met à jour posC_X et posC_Y par tranche de 1 pour evité des blocages en bord de map, et appelle updateHitbox().
     *
     * @param dx Le déplacement en X.
     * @param dy Le déplacement en Y.
     */
    public void move(int dx, int dy) {
        int remainingDx = Math.abs(dx)*speed;
        int remainingDy = Math.abs(dy)*speed;

        int stepMoveDx = (dx > 0) ? 1 : -1;
        while (remainingDx != 0) {
            
            if (isXOnRegion(getPosC_X() + stepMoveDx)) {
                this.addToPosC_X(stepMoveDx);
                remainingDx -= 1;
            } else {
                break; // Stop le déplacement si collision ou bord atteint
            }
        }
        int stepMoveDy = (dy > 0) ? 1 : -1;
        while (remainingDy != 0) {
            
            if (isYOnRegion(getPosC_Y() + stepMoveDy)) {
                this.addToPosC_Y(stepMoveDy);
                remainingDy -= 1;
            } else {
                break; // Stop le déplacement si collision ou bord atteint
            }
        }

        updateHitbox(); // Met à jour l'hitbox une fois les déplacements effectués
        
        if(this instanceof IAEntity){//TODO: Afin de détecter lors de coups...
            if(refreshTEMPO %5 ==0){
            getActualRegion().getGridIAEntity().update(this);
            }refreshTEMPO++;
        }
    }
    
    /** Si une colission entre Rectangle est détecté (quadtree) cette méthode est appelé
     * pour avoir une colission plus précise, dans le cas où l'object avec lequel cette entite est en colission
     * a une PolygonHitbox et pas seulement un rectangle comme les entites 
     * @param nextPosX la prochaine position x de l'entite (bas à gauche)
     * @param nextPosY la prochaine position y de l'entite
     * @param objCol l'objet avec l'entité est détecté en colission au niveau du rectangle hitbox (si il se déplace)
    */
    public boolean willCollidePolygoneMove(int nextPosX, int nextPosY, CollidableObject objCol){
        int directionX = (int) Math.signum(nextPosX - getPosC_X());
        int directionY = (int) Math.signum(nextPosY - getPosC_Y());
        for (int x = posHitboxX; x < posHitboxX + getHitboxFlat().getWidth(); x++) {
            if (directionY==-1 && objCol.getHitboxPolygon().contains(x, posHitboxY)) {//TODO: ----------overlaps existe pas, contains trop long ?....
                // Il y a collision sur le bord supérieur de l'hitbox
                return true;
                //TODO:Return la couleur pour comparer ensuite en fonction de l'utilité
            }
            if (directionY==1 && objCol.getHitboxPolygon().contains(x, posHitboxY+(int)getHitboxFlat().getHeight())) {
                // Il y a collision sur le bord inférieur de l'hitbox
                //System.out.println("colission en bas de l'arb");
                return true;
            }
        }
        for (int y = posHitboxY; y < posHitboxY + getHitboxFlat().getHeight(); y++) {
            if (directionX == 1 && objCol.getHitboxPolygon().contains(posHitboxX+ (int)getHitboxFlat().getWidth(), y)) {
                // Il y a collision sur le bord gauche de l'hitbox
                return true;
            }
            if (directionX == -1 && objCol.getHitboxPolygon().contains(posHitboxX, y)) {
                // Il y a collision sur le bord droit de l'hitbox
                return true;
            }
        }     
        return false;
    }

    /**Cette méthode est appelé lorsqu'on souhaite donner un coup, à la fin de l'animation statique.
     * Recherche avec le rectangle de la zone de dégat de l'objet utilisé (ou main) (selon la direction) utilisé si il y a un item/entité dans la zone.
     * Si oui, on lance hurt(int pv) sur ces objets.
     */
    public void hit(){//Animation de mort (attendre fin anim coup) + ajout detection polynom
        Rectangle currentHitZone = zoneDegatFromDirection(entityStateMachine.getCurrentOrientation().getDirection());
        //Liste des items en colission par rapport à leur rectangle
        List<CollidableObject> itemsColRect = actualRegion.getGridItem().getCollidingObjectsWithoutItself(currentHitZone, this).getList();
        //Liste des entity en colission (pas besoin d'autres test)//TODO pas encore PLAYER
        List<CollidableObject> entityCol = actualRegion.getGridIAEntity().getCollidingObjectsWithoutItself(currentHitZone, this).getList();
        boolean col = false;
        for(CollidableObject ent : entityCol){
            //System.out.println("ENTITY HURT");
            AudioManager.getInstance().playSound("entity","hurt",0.1f);
            ent.hurt(getCurrentDegat());
            reduceDurabilityToTool();

            if(ent.life <=0){//TODO DIE + Animation
                Game.getInstance().getRegion().killFromRegion((Entity)ent); //TODO: mettre dans collidableOBJ et que ca le fasse sur l'obj souhaité
            }
        }
        for (CollidableObject item : itemsColRect) {
            if(item.isPresentInZoneNoMove(currentHitZone)){//Verification polygon
                AudioManager.getInstance().playSound("wood","hurt",0.1f);
                //System.out.println("Item HURT");
                item.hurt(getCurrentDegat());
                reduceDurabilityToTool();
                //System.out.println("item touche");
                if(item.life <=0){//TODO DIE + Animation
                    Game.getInstance().getRegion().killFromRegion((Item)item); //TODO: mettre dans collidableOBJ et que ca le fasse sur l'obj souhaité
                }
            }
        }

        
    }

    /**
     * Réduit la durabilité de l'outil actuellement équipé par l'entité jouable.
     * Si l'entité est une instance de PlayableEntity et qu'un outil est actuellement équipé,
     * la durabilité de cet outil est réduite de 1.
     */
    public void reduceDurabilityToTool(){
        if(this instanceof PlayableEntity && ((PlayableEntity)this).getToolManager().isHaveAToolEquipped()){
            ((PlayableEntity)this).getToolManager().getCurrentEquippedTool().setSolidity(((PlayableEntity)this).getToolManager().getCurrentEquippedTool().getSolidity()-1);
            System.out.println("solidity : "+((PlayableEntity)this).getToolManager().getCurrentEquippedTool().getSolidity());

        }
    }

    /**
     * Récupère les dégâts actuels de l'entité.
     * Si l'entité est une instance de PlayableEntity et qu'un outil est actuellement équipé,
     * les dégâts de cet outil sont retournés. Sinon, les dégâts par défaut de l'entité sont retournés.
     *
     * @return Les dégâts actuels de l'entité.
     */
    public float getCurrentDegat(){
        float deg = degatDefault;
        if(this instanceof PlayableEntity && ((PlayableEntity)this).getToolManager().isHaveAToolEquipped()){
            deg = ((PlayableEntity)this).getToolManager().getCurrentEquippedTool().getDamage();
        }
        System.out.println("current degat: "+deg);
        return deg;
    }

    /**Update le rectangle de colission de l'outil/main, selon la direction de l'entite...
     * Il est donc nécessaire de mettre à jour currentHitZonePointDecallage et currentHitZoneLenght à chaque moment de hit ou quand nous voulons connaitre la zone de degat (calcul selon la position)*/
    public Rectangle zoneDegatFromDirection(String dir){
        //Point en bas à gauche du rectangle, décallé par hitZonePointDecallageDefault
        int startX=0;
        int startY=0;
        int width=0;
        int height=0;
        int marge = 15;
        //Pair<Integer, Integer> hitZoneLenght = getCurrentHitZoneLenght();
        //Pair<Integer, Integer> hitZonePointDecallage = getCurrentHitZonePointDecallage();

        if(dir.equals("U")||dir.equals("D")){
            //System.out.println("up taille");
            width = currentHitZoneLenght.getLeft();
            height = currentHitZoneLenght.getRight();
        }
        else{
            width = currentHitZoneLenght.getRight();
            height = currentHitZoneLenght.getLeft();
        }
        switch(dir){
            case "U":
                startX = posHitboxX + currentHitZonePointDecallage.getLeft() ;//Décal: long interieur:1 gauche(+)
                startY = posHitboxY + marge + hitboxHeightFlat + currentHitZonePointDecallage.getRight();//Decal: Eloignement:2 haut(+)
                break;
            case "D":
                startX = posHitboxX + currentHitZonePointDecallage.getLeft() ;//Décal: long interieur:1 gauche(+)
                startY = posHitboxY - height + marge - currentHitZonePointDecallage.getRight();//Decal: Eloignement:2 bas(-)
                break;//Ajustement /4 car pas symetrique coup haut bas
            case "R":
                startX = posHitboxX + hitboxWidth + currentHitZonePointDecallage.getRight();//Decal: Eloignement:2 droite(+)
                startY = posHitboxY + currentHitZonePointDecallage.getLeft() ;//Décal: long interieur:1 haut(+)
                break;
            case "L":
                startX = posHitboxX - width - currentHitZonePointDecallage.getRight();//Decal: Eloignement:2 gauche(-)
                startY = posHitboxY + currentHitZonePointDecallage.getLeft() ;//Décal: long interieur:1 haut(+)
                break;
            default:
                System.out.print("error, currentDirectionLetter is null for zoneDegatFromDirection ");
                startX = 0;
                startY = 0;
        }

        return new Rectangle(startX, startY,width, height);
    }

    public void setCurrentHitZoneLenght(Pair<Integer, Integer> hitZoneLenght) {
        this.currentHitZoneLenght = hitZoneLenght;
    }
    public void setCurrentHitZonePointDecallage(Pair<Integer, Integer> hitZonePointDecallage) {
        this.currentHitZonePointDecallage = hitZonePointDecallage;
    }



     /** Donne les entités dans la zone (selon leur rectangle hitbox)
      * @param entCol la liste des entités à tester
      * */
    public List<Entity> collideZoneNoMove(List<Entity> entCol,Rectangle zone){
        List<Entity> entityCol = new ArrayList<Entity>(); 
        for (Entity ent : entCol) {
            if ((zone.overlaps(ent.getHitboxFlat()))||(zone.contains(ent.getHitboxFlat()))||(ent.getHitboxFlat().contains(zone))){
                entityCol.add(ent);
            }
        }
        return entityCol;
    }

    /**
     * Vérifie s'il y a une collision avec d'autres objets ou le sol.
     *
     * @param dx La variation horizontale de la position.
     * @param dy La variation verticale de la position.
     * @return true s'il y a une collision, false sinon.
     */

    public boolean isColliding(int dx, int dy){
        return isCollidingWithGround(dx, dy) || (isCollidingWithObjects(dx, dy)!=null);
    }

    /**
     * Vérifie s'il y a une collision avec le sol.
     * @param dx La variation horizontale de la position.
     * @param dy La variation verticale de la position.
     * @return
     */
    public boolean isCollidingWithGround(int dx, int dy){
        return actualRegion.willCollideGroundMove(getPosC_X() + dx, getPosC_Y() + dy, this);
    }

    /**
     * Vérifie s'il y a une collision avec d'autres objets.
     * @param dx
     * @param dy
     * @return l'objet (le premier) avec lequel il y a collision, null sinon.
     */
    public CollidableObject isCollidingWithObjects(int dx, int dy){
        //On met a jour l'emplacement de la hitbox rectangle par rapport au possible mouvement
        Rectangle actRect = getHitboxFlat();
        getHitboxFlat().set(actRect.x+dx, actRect.y + dy, actRect.width, actRect.height);
        List<CollidableObject> objColList = actualRegion.getGridItem().getCollidingObjectsWithoutItself(getHitboxFlat(), this).getList();

        for (CollidableObject object : objColList) {
            if(willCollidePolygoneMove(getPosC_X() + dx,getPosC_Y()+dy, object)){
                getHitboxFlat().set(actRect);//Sinon on remet la position avant mouvement (pour le hitbox)
                return object;//Il y a colission (avec autres objets)
            }
        }
        return null;//Pas de colission
    }

    
    /**
     * Proximité d'ennemis : Vérifiez si des ennemis se trouvent à proximité de l'entité. Vous pouvez utiliser la position de l'entité et la position des ennemis pour calculer la distance entre eux. Si la distance est inférieure à une certaine valeur seuil, vous pouvez considérer que l'entité est en danger.
     * Santé de l'entité : Vérifiez si la santé de l'entité est inférieure à un certain seuil critique. Si la santé est basse, cela peut indiquer que l'entité est en danger.
     * Dommages récents : Si l'entité a subi des dommages récents, cela peut être un indicateur qu'elle est en danger. Vous pouvez utiliser un compteur de dommages ou une variable pour suivre les dommages subis par l'entité.
     * Ennemis visibles : Vérifiez si des ennemis sont visibles pour l'entité. Vous pouvez utiliser des techniques de détection de ligne de vue ou de champ de vision pour déterminer si des ennemis se trouvent dans le champ de vision de l'entité. Si des ennemis sont visibles, cela peut indiquer un danger potentiel.
     * Actions hostiles des ennemis : Si les ennemis ont récemment effectué des actions hostiles ou agressives envers l'entité, cela peut être un signe de danger imminent.
     **/
    public boolean isInDanger() {

        return false;
    }

    /**   
     * Vérification de la ligne de vue : Vous pouvez utiliser une vérification de ligne de vue pour déterminer si rien ne bloque la vision entre l'entité et le joueur. Cela peut être réalisé en traçant une ligne droite entre les positions de l'entité et du joueur, puis en vérifiant s'il y a des obstacles ou des murs entre eux. Si la ligne de vue est obstruée, l'entité ne peut pas voir le joueur.
     * Champ de vision limité : Vous pouvez attribuer à chaque entité un champ de vision limité. Si le joueur se trouve à l'intérieur de ce champ de vision, l'entité peut le détecter. Vous pouvez utiliser des concepts tels que des angles de vision et des cônes pour déterminer si le joueur se trouve dans le champ de vision de l'entité.
     * Bruits ou mouvements : Vous pouvez prendre en compte les bruits ou mouvements émis par le joueur. Si le joueur effectue des actions bruyantes ou se déplace de manière notable, cela peut attirer l'attention de l'entité et la rendre plus susceptible de le détecter.
     * Distance : Vous pouvez définir une distance maximale à partir de laquelle l'entité peut détecter le joueur. Si la distance entre l'entité et le joueur est supérieure à cette limite, l'entité ne pourra pas le voir.
     **/
    public boolean canSee(Entity player) {

        return false;
    }


    
}
